# UniMath

./: .#a  .coq_makefile_output.local  .dir-locals.el  .gitignore  .gitmodules  .mailmap  .package-files  .travis.yml  .travis.yml-old  AdjunctionHomTypesWeq.v  Archimedean.v  Auxiliary.v  CONTENTS.md  Codomain.v  ComprehensionC.v  Constructions.v  Core.v  DisplayedCatFromCwDM.v  EndofunctorsMonoidal.v  Equivalences.v  Equivalences_bis.v  ExampleSignatures.v  Examples.v  Fibrations.v  FunctorAlgebraViews.v  FunctorsPointwiseCoproduct.v  FunctorsPointwiseProduct.v  GenMendlerIteration.v  HLevel_n_is_of_hlevel_Sn.v  HorizontalComposition.v  INSTALL.md  INSTALL_COQIDE.md  INSTALL_MACOS.md  INSTALL_NIX.md  INSTALL_OPAM.md  INSTALL_WIN.md  KleisliCategory.v  LICENSE.md  Lam.v  LamSignature.v  (+56 more)
UniMath/: .dir-locals.el  .dir-locals.el.in  .gitignore  All.org  All.v  CONTENTS.md  CatAlgebras.v  README.md  Test.v  dune  f.v  foo.v  isolated-bug.v  reflect.v  wc_count_monoidal.l
UniMath/Algebra/: AbelianGroups.v  AbelianMonoids.v  Algebras.v  All.v  Apartness.v  Archimedean.v  BinaryOperations.v  BourbakiWitt.v  ConstructiveStructures.v  Dcpo.v  DivisionRig.v  DomainsAndFields.v  Domains_and_Fields.v  Elimination.v  Equations.v  Export.v  FixedPointTheorems.v  FreeMonoidsAndGroups.v  Free_Monoids_and_Groups.v  GroupAction.v  Groups.v  Groups2.v  IteratedBinaryOperations.v  Lattice.v  Matrix.v  Modules.v  Monoids.v  Monoids2.v  MonoidsAndGroups.v  Monoids_and_Groups.v  RigsAndRings.v  Rigs_and_Rings.v  Tests.v  Types_and_groups_with_operators.v  Universal.v  foo.v
UniMath/AlgebraicGeometry/: CategoryOfOpens.v  PresheafedSpaces.v  README.md  RingedSpaces.v  Schemes.v  Sheaf.v  SheavesOfRings.v  Spec.v  Stalks.v  Topology.v
UniMath/AlgebraicTheories/: AbstractClone.v  AbstractCloneAlgebraEndomorphism.v  AbstractCloneAlgebraicTheory.v  AbstractCloneCategory.v  AbstractCloneMorphism.v  AlgebraCategory.v  AlgebraCategoryCore.v  AlgebraFibration.v  AlgebraMorphisms.v  AlgebraicBase.v  AlgebraicBases.v  AlgebraicTheories.v  AlgebraicTheories2.v  AlgebraicTheory.v  AlgebraicTheoryAlgebraCategory.v  AlgebraicTheoryAlgebraFibration.v  AlgebraicTheoryAlgebraMorphisms.v  AlgebraicTheoryAlgebraWeqEndomorphismTheoryMorphism.v  AlgebraicTheoryAlgebras.v  (+33 more)
(+3240 files in other folders)
