opam-version: "2.0"
maintainer: "The UniMath Development Team"
homepage: "https://github.com/UniMath/UniMath"
dev-repo: "git+https://github.com/UniMath/UniMath.git"
bug-reports: "https://github.com/UniMath/UniMath/issues"
license: "Similar to MIT license"
authors: ["The UniMath Development Team"]
build: [make "BUILD_COQ=no" "-j%{jobs}%"]
install: [make "BUILD_COQ=no" "install"]
depends: [
  "ocaml"
  "rocq-core" {>= "9.0"}
  "coq-core"
]
synopsis: "Library of Univalent Mathematics"
