
(include_subdirs qualified)

(coq.theory
 (name UniMath)
 (package coq-unimath)
  (libraries coq-metacoq-common coq-metacoq coq-metacoq-utils coq-metacoq-template)
 (flags :standard
        -noinit
        -indices-matter
        -type-in-type
        -w -notation-overridden))

(rule
 (deps (source_tree .))
 (action
  (with-stdout-to All.v
   (run %{project_root}/util/generate-exports UniMath "%{deps}"))))
